assets/css/custom.css
body {
    margin: 0;
    justify-items: center;
    text-align: center;
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: 14px;
}

.header {
    box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.4);
    border-bottom: 1px solid #777777;
    background: #7AC143;
    background-image: url('/assets/img/banner.png');
    background-repeat: no-repeat;
    background-position: center;
    height: 60px;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
}

.body-content {
    max-width: 1170px;
    margin: 50px;
    margin-top: 70px;
}

.body-content>div {
    padding-bottom: 16px;
}

div.panel {
    text-align: left;
    margin-bottom: 20px;
    background-color: #fff;
    border-radius: 4px;
    padding: 17px;
    border-radius: 5px;
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
}

.panel.google {
    padding-right: 0px;
}

.panel.google form {
    display: flex;
}

.panel.google img {
    height: 40px;
}

.quarter {
    width: 25%;
}

.half {
    width: 50%;
}

input {
    font-size: 14px;
    font-weight: 400;
    line-height: 1.4;
    user-select: none;
    background-image: none;
    border: 1px solid #ccc;
    border-radius: 4px;
    padding: 6px 12px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) inset;
}

input[type=text] {
    width: calc(100% - 24px);
    cursor: text;
    text-align: left;
}

input[type=submit] {
    background-color: #266090;
    border-color: #21537c;
    color: white;
    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
    cursor: pointer;
}

.center {
    text-align: center;
}

hr {
    margin-top: 20px;
    margin-bottom: 20px;
    border: 0;
    border-top: 1px solid #eee;
}

a {
    color: #337ab7;
    text-decoration: none;
}

a:hover {
    text-decoration-line: underline;
    color: #21537c;
}

.panel.alert {
    box-shadow: 0 0px 3px rgba(0, 0, 0, 0.3);
}

.panel.green {
    color: #3c763d;
    background: #dff0d8;
    border: 1px solid #d6e9c6;
}

.panel.yellow {
    color: #8a6d3b;
    background: #fcf8e3;
    border: 1px solid #faebcc;
}

.panel.red {
    color: #a94442;
    background-color: #f2dede;
    border-color: #ebccd1;
}

.tiles {
    display: block;
}

.tile {
    position: relative;
    display: inline-block;
    color: #266090;
    width: 150px;
    height: 100px;
    border: 1px solid #CCCCCC;
    border-radius: 5px;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: contain;
    margin: 15px;
    text-align: center;
    box-sizing: border-box;
    transition: all .3s;
    overflow: hidden;
}

.tile img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.tile:hover,
.tile:focus,
.tile:active {
    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
}

.tile::before {
    content: '';
    position: absolute;
    left: 50%;
    right: 50%;
    bottom: 0;
    background: #26B5A0;
    height: 4px;
    transition-property: left, right;
    transition-duration: 0.3s;
    transition-timing-function: ease-out;
}

.tile:hover::before,
.tile:focus::before,
.tile:active::before {
    left: 0;
    right: 0;
}

.tile.graduated::after {
    position: absolute;
    left: -25px;
    top: -8px;
    padding: 15px 25px 5px 25px;
    rotate: -45deg;
    color: white;
    background: #7AC143;
    box-shadow: 0px -5px 4px 5px black;
    font-family: 'Font Awesome 6 Free';
    font-weight: 900;
    content: '\f19d';
}

.tile.killed {
    pointer-events: none;
}

.tile.killed img {
    filter: blur(2px) saturate(0%);
    background: radial-gradient(#0002, #0006);
}

.tile.killed::after {
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    filter: none;
    padding: 0 60px;
    position: absolute;
    content: 'WASTED';
    font-family: impact;
    font-size: 25px;
    text-shadow: 0 0 3px black;
    color: #f60009;
    background: linear-gradient(90deg, #0000, #0006, #0008, #0006, #0000);
}

